--- a/web/index.html
+++ b/web/index.html
@@ -51,7 +51,7 @@
                             <ul class="scrollable-list" id="core_eew_taipei">
                             </ul>
                         </div>
-                        <div class="info-box" draggable="true" style="margin-top: 10px;flex: 1;width: 475px; height: 194px;">
+                        <div class="info-box" draggable="true" style="margin-top: 10px;flex: 1;height: 194px;">
                             <span class="info-box-title">警報地域</span>
                             <span class="info-box-body" style="font-weight: 900;font-size: 35px;"
                                 id="alert-area"></span>
